feat(mcci): create basic gui and inventory example waitting to be extensed

--- a/mcci/gradle.properties
+++ b/mcci/gradle.properties
@@ -10,6 +10,9 @@ org.gradle.jvmargs=-Xmx1G
 	#Fabric api
     fabric_version=0.5.1+build.294-1.15
 
+	#libgui
+	libgui_version=1.8.1+1.15.2
+
 	# Mod Properties
 	mod_version = 1.0.0
 	maven_group = com.evernightfireworks
