--- a/mcci/build.gradle
+++ b/mcci/build.gradle
@@ -18,12 +18,12 @@ repositories {
         name = "CottonMC"
         url = "http://server.bbkr.space:8081/artifactory/libs-release"
     }
-}
-
-repositories {
     maven {
         name = 'Fabric'
         url = "http://maven.fabricmc.net/"
+    }
+    flatDir {
+        dirs 'lib'
     }
 }
 
@@ -32,11 +32,10 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
     modImplementation "io.github.cottonmc:LibGui:${project.libgui_version}"
+    implementation name: "Webview"
 }
 
 processResources {
