build(mcci): filter out ljwgl lib deps in build config because of path fixes

--- a/mcci/build.gradle
+++ b/mcci/build.gradle
@@ -25,10 +25,12 @@ repositories {
     flatDir {
         dirs 'lib'
     }
+    mavenCentral()
 }
 
 dependencies {
     //to change the versions see the gradle.properties file
+    compile group: 'black.ninia', name: 'jep', version: project.jep_version
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
