--- a/mcci/gradle.properties
+++ b/mcci/gradle.properties
@@ -7,11 +7,14 @@ org.gradle.jvmargs=-Xmx8G
 	yarn_mappings=1.15.2+build.15
 	loader_version=0.8.2+build.194
 
-	#Fabric api
+	# Fabric api
     fabric_version=0.5.1+build.294-1.15
 
-	#libgui
+	# Libgui
 	libgui_version=1.8.1+1.15.2
+
+	# Python
+	jep_version=3.9.0
 
 	# Mod Properties
 	mod_version = 1.0.0
