feat(mcci::mcci): finish mcci causal engine basic functions

--- a/mcci/gradle.properties
+++ b/mcci/gradle.properties
@@ -13,6 +13,9 @@ org.gradle.jvmargs=-Xmx8G
 	# Libgui
 	libgui_version=1.8.1+1.15.2
 
+	# Cotton Client Commands
+	cotton_client_commands=1.0.0+1.15.2
+
 	# Python
 	jep_version=3.9.0
 
