--- a/mcci/build.gradle
+++ b/mcci/build.gradle
@@ -15,8 +15,8 @@ minecraft {
 
 repositories {
     maven {
-        name = "CottonMC"
-        url = "http://server.bbkr.space:8081/artifactory/libs-release"
+        name = 'CottonMC'
+        url = 'https://server.bbkr.space/artifactory/libs-release'
     }
     maven {
         name = 'Fabric'
@@ -33,8 +33,12 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "io.github.cottonmc:LibGui:${project.libgui_version}"
+    modImplementation "io.github.cottonmc:cotton-client-commands:${project.cotton_client_commands}"
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    testCompile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.13.3'
+    compile group: 'guru.nidi', name: 'graphviz-java', version: '0.16.1'
+    compile group: 'com.eclipsesource.j2v8', name: 'j2v8', version: '6.1.0'
     compile files("lib/Webview.jar")
-    compile files("../libmcci/libmcci-env/Lib/site-packages/jep/jep-${project.jep_version}.jar")
 }
 
 processResources {
@@ -55,14 +59,6 @@ processResources {
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
-}
-
-tasks.withType(JavaExec) {
-    environment('PYTHONHOME', "../../libmcci/libmcci-env")
-    environment('PATH',
-            "../../libmcci/libmcci-env" + System.getProperty("path.separator")
-                    + "../../libmcci/libmcci-env/Scripts" + System.getProperty("path.separator")
-                    + "$System.env.PATH")
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
