fix(mcci): add a embedded web server to support web get function to fix webview local browse bug

--- a/mcci/gradle.properties
+++ b/mcci/gradle.properties
@@ -3,21 +3,19 @@ org.gradle.jvmargs=-Xmx8G
 
 # Fabric Properties
 	# Check these on https://modmuss50.me/fabric.html
+
+	# minecraft & fabric
 	minecraft_version=1.15.2
 	yarn_mappings=1.15.2+build.15
 	loader_version=0.8.2+build.194
-
-	# Fabric api
     fabric_version=0.5.1+build.294-1.15
-
-	# Libgui
 	libgui_version=1.8.1+1.15.2
+	cotton_client_commands_version=1.0.0+1.15.2
 
-	# Cotton Client Commands
-	cotton_client_commands=1.0.0+1.15.2
-
-	# Python
-	jep_version=3.9.0
+	# others
+	graphviz_java_version=0.16.1
+	j2v8_version=6.1.0
+	nanohttpd_version=2.3.1
 
 	# Mod Properties
 	mod_version = 1.0.0
