--- a/mcci/build.gradle
+++ b/mcci/build.gradle
@@ -33,11 +33,11 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "io.github.cottonmc:LibGui:${project.libgui_version}"
-    modImplementation "io.github.cottonmc:cotton-client-commands:${project.cotton_client_commands}"
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
-    testCompile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.13.3'
-    compile group: 'guru.nidi', name: 'graphviz-java', version: '0.16.1'
-    compile group: 'com.eclipsesource.j2v8', name: 'j2v8', version: '6.1.0'
+    modImplementation "io.github.cottonmc:cotton-client-commands:${project.cotton_client_commands_version}"
+    compile group: 'guru.nidi', name: 'graphviz-java', version: project.graphviz_java_version
+    compile group: 'com.eclipsesource.j2v8', name: 'j2v8', version: project.j2v8_version
+    compile group: 'org.nanohttpd', name: 'nanohttpd', version: project.nanohttpd_version
+    compile group: 'org.nanohttpd', name: 'nanohttpd-webserver', version: project.nanohttpd_version
     compile files("lib/Webview.jar")
 }
 
