feat(mcci): finish instrument and identification

--- a/mcci/gradle.properties
+++ b/mcci/gradle.properties
@@ -15,6 +15,7 @@ org.gradle.jvmargs=-Xmx8G
 	# others
 	graphviz_java_version=0.16.1
 	j2v8_version=6.1.0
+	j2v8_platform_version=4.6.0
 	nanohttpd_version=2.3.1
 
 	# Mod Properties
