--- a/mcci/build.gradle
+++ b/mcci/build.gradle
@@ -34,11 +34,14 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "io.github.cottonmc:LibGui:${project.libgui_version}"
     modImplementation "io.github.cottonmc:cotton-client-commands:${project.cotton_client_commands_version}"
+    compile files("lib/Webview.jar")
     compile group: 'guru.nidi', name: 'graphviz-java', version: project.graphviz_java_version
     compile group: 'com.eclipsesource.j2v8', name: 'j2v8', version: project.j2v8_version
+    compile group: 'com.eclipsesource.j2v8', name: 'j2v8_win32_x86_64', version: project.j2v8_platform_version
+    compile group: 'com.eclipsesource.j2v8', name: 'j2v8_linux_x86_64', version: project.j2v8_platform_version
+    compile group: 'com.eclipsesource.j2v8', name: 'j2v8_macosx_x86_64', version: project.j2v8_platform_version
     compile group: 'org.nanohttpd', name: 'nanohttpd', version: project.nanohttpd_version
     compile group: 'org.nanohttpd', name: 'nanohttpd-webserver', version: project.nanohttpd_version
-    compile files("lib/Webview.jar")
 }
 
 processResources {
